# trivalibs

./: .gitignore  Cargo.toml  LICENSE  README.md  form_enhancement_research.md  painter_technical_overview.md  run_all_examples.sh
crates/trivalibs/: Cargo.toml
crates/trivalibs/src/: lib.rs
crates/trivalibs_core/: Cargo.toml
crates/trivalibs_core/src/: lib.rs  macros.rs
crates/trivalibs_core/src/data/: mod.rs  vertex_index.rs
crates/trivalibs_core/src/data/grid/: mod.rs
crates/trivalibs_core/src/data/neighbour_list/: traits.rs
crates/trivalibs_core/src/data_structures/: mod.rs
crates/trivalibs_core/src/data_structures/grid/: mod.rs
crates/trivalibs_core/src/data_structures/neighbour_list/: mod.rs  tests.rs
crates/trivalibs_core/src/geometry/: mod.rs
crates/trivalibs_core/src/geometry/line_2d/: buffered_geometry.rs  mod.rs
crates/trivalibs_core/src/geometry/mesh_geometry_3d/: mod.rs  tests.rs
crates/trivalibs_core/src/math/: coords.rs  mod.rs  noise.rs
crates/trivalibs_core/src/math/interpolation/: mod.rs
crates/trivalibs_core/src/math/transform/: mod.rs
crates/trivalibs_core/src/rendering/: mod.rs
crates/trivalibs_core/src/rendering/camera/: mod.rs
crates/trivalibs_core/src/rendering/line_2d/: buffered_geometry.rs  mod.rs
crates/trivalibs_core/src/rendering/mesh_geometry/: mod.rs  tests.rs  utils.rs
crates/trivalibs_core/src/rendering/mesh_geometry_2/: mod.rs  tests.rs  utils.rs
crates/trivalibs_core/src/rendering/mesh_geometry_old/: mod.rs  tests.rs
crates/trivalibs_core/src/rendering/scene/: mod.rs
crates/trivalibs_core/src/rendering/shapes/: box.rs  cuboid.rs  mod.rs  quad.rs  sphere.rs
crates/trivalibs_core/src/rendering/texture/: mod.rs
crates/trivalibs_core/src/rendering/transform/: mod.rs
crates/trivalibs_core/src/rendering/webgl_buffered_geometry/: mod.rs
crates/trivalibs_core/src/utils/: app_state.rs  mod.rs  rand_utils.rs
crates/trivalibs_macros/: Cargo.toml
crates/trivalibs_nostd/: Cargo.toml
crates/trivalibs_nostd/src/: bits.rs  color.rs  coords.rs  float_ext.rs  lib.rs  num_ext.rs  vec_ext.rs
crates/trivalibs_painter/: Cargo.toml
crates/trivalibs_painter/src/: app.rs  app_state.rs  bind_group.rs  binding.rs  binding_constants.rs  dev_state.rs  effect.rs  events.rs  form.rs  layer.rs  lib.rs  painter.rs  pipeline.rs  sampler.rs  shade.rs  shaders.rs  shape.rs  sketch.rs  texture.rs  texture_utils.rs  uniform.rs  uniform_constants.rs  window_dimensions.rs
crates/trivalibs_painter/src/utils/: input_state.rs
crates/trivalibs_shaders/: Cargo.toml
crates/trivalibs_shaders/src/: blur.rs  color.rs  coords.rs  fit.rs  float_ext.rs  lerp.rs  lib.rs  smoothstep.rs  step.rs  vec_ext.rs
examples/ball/: Cargo.toml  geom.rs  main.rs
examples/ball/shader/: Cargo.toml  fragment.spv  spirv-manifest.json  vertex.spv
examples/ball/src/: geom.rs  main.rs
examples/base_effect/: main.rs
examples/base_effect/shader/: Cargo.toml  main.spv
examples/blur/: Cargo.toml  main.rs
examples/blur/blur_shader/: Cargo.toml  frag.spv  manifest.json
examples/blur/shader/: Cargo.toml  blur_fs.spv  manifest.json  triangle_fs.spv  triangle_vs.spv
examples/blur/src/: main.rs
examples/blur/triangle_shader/: Cargo.toml  frag.spv  manifest.json  vert.spv
examples/deferred_light/: Cargo.toml  geom.rs  main.rs
examples/deferred_light/light_shader/: Cargo.toml  fragment.spv  manifest.json
examples/deferred_light/scene_shader/: Cargo.toml  fragment.spv  vertex.spv
examples/deferred_light/shader/: Cargo.toml  light_fs.spv  manifest.json  scene_fs.spv  scene_vs.spv
examples/deferred_light/src/: geom.rs  main.rs
examples/draft_file/: Cargo.toml
examples/draft_file/src/: main.rs
examples/dynamic_shapes/: main.rs
examples/dynamic_shapes/shader/: Cargo.toml  effect_fragment.spv  fragment.spv  manifest.json  vertex.spv
examples/dynamic_texture/: main.rs
examples/dynamic_texture/shader/: Cargo.toml  col_fs.spv  manifest.json  tex_fs.spv
examples/frag_shader/: Cargo.toml
examples/frag_shader/shader/: Cargo.toml  main.spv  manifest.json  spirv-manifest.json
examples/frag_shader/src/: main.rs
examples/geometries/: main.rs
examples/geometries/shader/: Cargo.toml  ground_frag.spv  ground_vert.spv  manifest.json
examples/instances/: Cargo.toml  main.rs
examples/instances/shader/: Cargo.toml  fragment.spv  spirv-manifest.json  vertex.spv
examples/instances/src/: main.rs
examples/layer_tex/: Cargo.toml  main.rs
examples/layer_tex/color_shader/: Cargo.toml  fs_main.spv  manifest.json  vs_main.spv
examples/layer_tex/shader/: Cargo.toml  color_fs.spv  color_vs.spv  manifest.json  texture_fs.spv  texture_vs.spv
examples/layer_tex/src/: main.rs
examples/mipmap/: main.rs
examples/mouse_color/: Cargo.toml  main.rs
examples/noise_tests/: main.rs
examples/noise_tests/shader/: Cargo.toml  hash_shader.spv  manifest.json  simplex_2d_shader.spv  simplex_3d_shader.spv  simplex_4d_shader.spv  tiling_noise_2d_shader.spv  tiling_noise_3d_shader.spv  tiling_simplex_shader.spv
examples/noise_tests/shader/src/: lib.rs
examples/polygons/: Cargo.toml
examples/polygons/shader/: Cargo.toml  spirv-manifest.json  vertex.spv
examples/polygons/shader/src/: lib.rs
examples/random_lines/: main.rs
examples/render_to_mip/: main.rs
examples/render_to_mip/shader/: Cargo.toml  image.spv  mip_sampling.spv
examples/render_to_mip/shader/src/: lib.rs
examples/shader_image/: Cargo.toml  main.rs
examples/simple_triangle/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/shader/: Cargo.toml  fragment.spv  spirv-manifest.json  vertex.spv
examples/triangle/shader/src/: lib.rs
examples/user_event/: Cargo.toml  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
src/data_structures/: mod.rs
src/geometry/: mod.rs  vertex_index.rs
src/painter/: effect.rs  form.rs  layer.rs  mod.rs  painter.rs  shade.rs  shaders.rs  sketch.rs  texture.rs  uniform.rs
src/rendering/: mod.rs
src/utils/: app_state.rs  f32.rs  f32_utils.rs  math.rs  mod.rs  rand_utils.rs
src/wasm_helpers/: mod.rs
(+79 files in other folders)
