[package]
name = "trivalibs_examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.82" # Prevent Cargo.lock version 4, cargo gpu does not support it yet

[workspace]
resolver = "2"
members = [
	"crates/*",
	"examples/triangle",    # special example where the code references a shader crate
	"examples/**/shader",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
trivalibs = { path = "crates/trivalibs" }
trivalibs_core = { path = "crates/trivalibs_core" }
trivalibs_painter = { path = "crates/trivalibs_painter" }
trivalibs_shaders = { path = "crates/trivalibs_shaders" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_bytes = "0.11"
bytemuck = { version = "1.20", features = ["derive"] }
js-sys = "0.3"
lerp = "0.5"
approx = "0.5.1"
rand = {version = "0.9", features = ["thread_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
glam = { version = "0.30", features = [
	"bytemuck",
	"serde",
	"rand",
	"approx",
] }
winit = "0.30"
wgpu = { version = "26.0", features = ["spirv"] }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "1e4e468ccf7965d90a9748c7513f72e852fb5041" }
log = "0.4"
env_logger = "0.11"
pollster = "0.4.0"
macro_rules_attribute = "0.2.0"
png = "0.17.14"
flume = "0.11.1"
notify = "8.0.0"

[dependencies]

trivalibs = { path = "crates/trivalibs" }
trivalibs_core = { path = "crates/trivalibs_core" }
trivalibs_painter = { path = "crates/trivalibs_painter" }
trivalibs_shaders = { path = "crates/trivalibs_shaders" }
png.workspace = true
bytemuck.workspace = true
log.workspace = true
pollster.workspace = true
env_logger.workspace = true
flume.workspace = true
