[package]
name = "trivalibs_examples"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
	"crates/*",
	"examples/triangle",    # special example where the code references a shader crate
	"examples/**/shader",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
trivalibs = { path = "crates/trivalibs" }
trivalibs_core = { path = "crates/trivalibs_core" }
trivalibs_painter = { path = "crates/trivalibs_painter" }
trivalibs_nostd = { path = "crates/trivalibs_nostd" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_bytes = "0.11"
bytemuck = { version = "1.24", features = ["derive"] }
js-sys = "0.3"
lerp = "0.5"
approx = "0.5.1"
rand = {version = "0.9", features = ["thread_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
glam = { version = "0.30", features = [
	"bytemuck",
	"serde",
	"rand",
	"approx",
] }
winit = "0.30"
wgpu = { version = "26.0", features = ["spirv"] }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "2aa4d4f8a8ba73103501562cfca17b8163e5a887" }
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
macro_rules_attribute = "0.2.0"
png = "0.18"
flume = "0.11"
notify = "8.2"

[dependencies]

trivalibs = { path = "crates/trivalibs" }
trivalibs_core = { path = "crates/trivalibs_core" }
trivalibs_painter = { path = "crates/trivalibs_painter" }
trivalibs_nostd = { path = "crates/trivalibs_nostd" }
png.workspace = true
bytemuck.workspace = true
log.workspace = true
pollster.workspace = true
env_logger.workspace = true
flume.workspace = true

[workspace.metadata.rust-gpu.build]
multimodule = true

[workspace.metadata.rust-gpu.install]
spirv_builder_source = "https://github.com/Rust-GPU/rust-gpu"
spirv_builder_version = "2aa4d4f8a8ba73103501562cfca17b8163e5a887"
