[package]
name = "trivalibs-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
trivalibs-macros = { path = "../trivalibs_macros" }
trivalibs-nostd.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_bytes.workspace = true
bytemuck.workspace = true
js-sys.workspace = true
lerp.workspace = true
approx.workspace = true
rand.workspace = true
getrandom.workspace = true
glam.workspace = true
log.workspace = true
env_logger.workspace = true
macro_rules_attribute.workspace = true
