[package]
name = "trivalibs_painter"
version = "0.1.0"
edition.workspace = true

[dependencies]
trivalibs_core = { path = "../trivalibs_core" }
bytemuck.workspace = true
winit.workspace = true
wgpu.workspace = true
log.workspace = true
env_logger.workspace = true
pollster.workspace = true
notify.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
