[package]
name = "trivalibs-painter"
version = "0.1.0"
edition.workspace = true

[dependencies]
trivalibs-core = { path = "../trivalibs_core" }
bytemuck.workspace = true
winit.workspace = true
wgpu.workspace = true
log.workspace = true
env_logger.workspace = true
pollster.workspace = true
notify.workspace = true
serde.workspace = true
serde_json = "1.0"
dirs = "5.0"
web-time = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CssStyleDeclaration", "Document", "Element", "HtmlElement", "Node", "Window"] }
console_error_panic_hook = "0.1"
console_log = "1"
