[package]
name = "draft_polygons_shader"
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

# Dependencies for CPU and GPU code
[dependencies]
spirv-std = { version = "0.9" }

# dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
trivalibs.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
