[package]
name = "render_to_mip_shader"
edition.workspace = true
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
spirv-std.workspace = true
trivalibs_shaders.workspace = true

[package.metadata.rust-gpu.build]
multimodule = true

[package.metadata.rust-gpu.install]
spirv_builder_source = "https://github.com/Rust-GPU/rust-gpu"
spirv_builder_version = "2aa4d4f8a8ba73103501562cfca17b8163e5a887"
