[package]
name = "text_triangle_shader"
edition.workspace = true
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib"]

# Dependencies for CPU and GPU code
[dependencies]
spirv-std.workspace = true

# dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
trivalibs.workspace = true
bytemuck.workspace = true
